--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "newapp",
+  "name": "samadapp",
   "version": "1.0.0",
   "description": "new test application",
   "main": "src/index.js",
