--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "homepage": "https://github.com/samadariyan/samadapp#readme",
   "dependencies": {
     "unique-random-array": "3.0.0"
+  },
+  "devDependencies": {
+    "chai": "5.1.1",
+    "mocha": "10.4.0"
   }
 }
